公告通知接口
